# colibase

./: .env  Cargo.toml  colibase.db
admin-ui/: astro.config.mjs  package-lock.json  package.json  vite.config.ts
admin-ui/src/: app.html
admin-ui/src/actions/: login_schema.ts
admin-ui/src/app/(entry)/: entry.scss  layout.tsx
admin-ui/src/app/(entry)/login/: page.tsx
admin-ui/src/app/(entry)/register/: page.tsx
admin-ui/src/app/(ui)/: layout.tsx
admin-ui/src/app/(ui)/dashboard/: page.tsx
admin-ui/src/components/: loginForm.astro  loginitform.scss  loginitform.tsx
admin-ui/src/lib/components/: darkmode.svelte  loginit.svelte  logside.svelte
admin-ui/src/pages/entry/: init.astro  login.astro
admin-ui/src/pages/ui/: dashboard.astro
admin-ui/src/routes/(entry)/: +layout.server.ts  +layout.svelte
admin-ui/src/routes/(entry)/login/: +page.svelte
admin-ui/src/routes/(entry)/register/: +page.svelte
src/: main.rs
src/models/: models.rs
src/server/: server.rs
