[package]
name = "colibase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.2"
deadpool = "0.10.0"
deadpool-sqlite = "0.7.0"
dotenvy = "0.15.7"
futures = "0.3.29"
http-body-util = "0.1.0"
hyper = { version = "1.0.1", features = ["full"] }
hyper-util = { version = "0.1.1", features = ["full"] }
multer = { version = "2.1.0", features = ["all"] }
rand = "0.8.5"
regex = "1.10.2"
rusqlite = "0.30.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["full"] }
url = "2.5.0"
